<resources>
    <string name="app_name">SweetHomeClient</string>
    <string name="regist">注册</string>
    <string name="password">密码</string>
    <string name="checkpassword">确认密码</string>
    <string name="login">登录</string>
    <string name="sign_up">Sign Up</string>
    <string name="friend">好友</string>
    <string name="null_null">null/null</string>
    <string name="username">USERNAME</string>
    <string name="last_msg">last msg</string>
    <string name="headImg">头像</string>
    <string name="id">ID</string>
    <string name="createtime">创建时间</string>
    <string name="userName">用户名</string>
    <string name="sexy">性别</string>
    <string name="mail">邮箱</string>
    <string name="phoneNumber">手机</string>
    <string name="userId">唯一标识</string>
    <string name="changeFriendSize">修改好友数量上限</string>
    <string name="saveChange">保存资料修改</string>
    <string name="changePassword">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="DestroyUser">注销账户</string>
    <string name="userState">用户状态</string>
    <string name="pleaseInput">请输入...</string>
    <string name="send">发送</string>
    <string name="clickStartRecord">点击录音</string>
    <string name="time00_00_01">00:00:01</string>
    <string name="time000001000013">00:00:01/00:00:13</string>
    <string name="rerecord">重录</string>
    <string name="play">播放</string>
    <string name="friendNum">好友数量</string>
    <string name="_1_2">1/2</string>
    <string name="back">返回</string>
    <string name="addFriend">加为好友</string>
    <string name="report">举报</string>
    <string name="find">找</string>
    <string name="interestselect">兴趣选择</string>
    <string name="groupmatch">群组匹配</string>
    <string name="singlematch">单人匹配</string>
    <string name="interest">兴趣</string>
    <string name="age">年龄</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="sui">岁</string>
    <string name="man">男</string>
    <string name="manwoman">中</string>
    <string name="woman">女</string>
    <string name="_100">100</string>
    <string name="meet">遇</string>
    <string name="friend1">知</string>
    <string name="me">己</string>
    <string name="submit">提交</string>
    <string name="birth">生日</string>
    <string name="oldpassword">旧密码</string>
    <string name="newpassword">新密码</string>
    <string name="newpasswordReCheck">再次确认</string>
    <string name="_00_00_10">/00:00:10</string>
    <string name="reason">理由</string>
    <string name="friendSIze">好友数量</string>
</resources>