<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/all_background">

    <EditText
        android:id="@+id/fragment_mine_password_oldPwdEt"
        android:layout_width="190dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:background="@color/blue"
        android:gravity="center"
        android:hint="@string/oldpassword"
        android:textAlignment="center"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/fragment_mine_password_newPwdEt1"
        android:layout_width="190dp"
        android:layout_height="33dp"
        android:layout_marginTop="84dp"
        android:background="@color/blue"
        android:gravity="center"
        android:hint="@string/newpassword"
        android:textAlignment="center"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_mine_password_newPwdEt2"
        android:layout_width="190dp"
        android:layout_height="33dp"
        android:layout_marginTop="136dp"
        android:background="@color/blue"
        android:gravity="center"
        android:hint="@string/newpasswordReCheck"
        android:textAlignment="center"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_mine_dialog_submitBtn"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginTop="188dp"
        android:background="#9951AAE3"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="7pt"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>