<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="1740px"
    android:background="#3DD7D7D7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200px"
        android:layout_marginTop="180px"
        android:text="@string/headImg"
        android:textSize="8pt"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200px"
        android:layout_marginTop="380px"
        android:text="@string/userId"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200px"
        android:layout_marginTop="500px"
        android:text="@string/createtime"
        android:textSize="8pt"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200px"
        android:layout_marginTop="620px"
        android:text="@string/userName"
        android:textSize="8pt"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200px"
        android:layout_marginTop="740px"
        android:text="@string/sexy"
        android:textSize="8pt"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200px"
        android:layout_marginTop="860px"
        android:text="@string/mail"
        android:textSize="8pt"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200px"
        android:layout_marginTop="980px"
        android:text="@string/phoneNumber"
        android:textSize="8pt"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.banmo.sweethomeclient.customview.CircleImageView
        android:id="@+id/fragment_mine_headImg"
        android:layout_width="280px"
        android:layout_height="280px"
        android:src="@mipmap/all_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/fragment_mine_idEt"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="500px"
        android:layout_marginTop="380px"
        android:background="#6680FFFF"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_mine_createTimeEt"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="500px"
        android:layout_marginTop="500px"
        android:background="#6680FFFF"
        android:gravity="center"
        android:text="@string/createtime"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_mine_usernameEt"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="500px"
        android:layout_marginTop="620px"
        android:background="#6680FFFF"
        android:gravity="center"
        android:text="@string/userName"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_mine_sexyEt"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="500px"
        android:layout_marginTop="740px"
        android:background="#6680FFFF"
        android:gravity="center"
        android:text="@string/sexy"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_mine_mailEt"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="500px"
        android:layout_marginTop="860px"
        android:background="#6680FFFF"
        android:gravity="center"
        android:text="@string/mail"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_mine_phoneEt"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="500px"
        android:layout_marginTop="980px"
        android:background="#6680FFFF"
        android:gravity="center"
        android:text="@string/phoneNumber"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>